Cambios realizados V3 por reunion con SEP en 3a semana de marzo, Ing. Mendez

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                                 </ul>
                             </div>
                             <div class="header-right-btns">
-                                <!-- <a class="search-btn" href="javascript:void(0);" title=""> -->
-                                    <!-- <i class="flaticon-magnifying-glass"></i></a>  -->
+                                <!--<a class="search-btn" href="javascript:void(0);" title="">
+                                    <i class="flaticon-magnifying-glass"></i></a>-->
                                <a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a>
-                               <a class="menu-btn" href="javascript:void(0);" title=""><i class="flaticon-menu"></i></a>
+                               <!-- <a class="menu-btn" href="javascript:void(0);" title=""><i class="flaticon-menu"></i></a>-->
                             </div>
                         </nav>
                     </div><!-- Logo Menu Wrap -->
@@ -78,7 +78,7 @@
                                           <input type="text" class="form-control" name="email" onChange="conMayusculas(this)" required="">
                                        </div>                       
                         <button class="thm-btn fill-btn" type="submit">Iniciar<span></span></button>
-                        <a class="d-inline-block" href="javascript:void(0);" title="">Forget A Password</a>
+                        <!--<a class="d-inline-block" href="javascript:void(0);" title="">Forget A Password</a>-->
                     </form>
                 </div>
             </div><!-- Login Popup --><br><br><br><br><br><br><br>
