--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <ul class="mb-0 list-unstyled d-inline-flex">
                                     <li class="menu-item-has-children"><a href="javascript:void(0);" title="">INICIO</a></li>
                                     <li class="menu-item-has-children"><a href="historia.html" title="">HISTORIA</a></li>  
-                                    <li><a href="view/formulario.php" title="">FORMULARIO</a></li>
+                                    <li><a href="view/login.php" title="">FORMULARIO</a></li>
                                     <li><a href="oferta.html" title="">OFERTA</a></li>
                                     <li><a href="#" title="">BLOG</a></li>
                                 </ul>
@@ -51,7 +51,7 @@
                             <div class="header-right-btns">
                                 <!--<a class="search-btn" href="javascript:void(0);" title="">
                                     <i class="flaticon-magnifying-glass"></i></a>-->
-                               <a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a>
+                               <!--<a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a>-->
                                <!-- <a class="menu-btn" href="javascript:void(0);" title=""><i class="flaticon-menu"></i></a>-->
                             </div>
                         </nav>
@@ -63,7 +63,7 @@
                 <ul class="mb-0 list-unstyled w-100">
                     <li class="menu-item-has-children"><a href="javascript:void(0);" title="">INICIO</a></li>
                     <li class="menu-it@em-has-children"><a href="historia.html" title="">HISTORIA</a></li>  
-                    <li><a href="view/formulario.php">FORMULARIO</a></li>
+                    <li><a href="view/login.php">FORMULARIO</a></li>
                     <li><a href="oferta.html" title="">OFERTA</a></li>
                     <li><a href="#" title="">BLOG</a></li>                         
                 </ul>
