Bug Fix versión 1.03 previo a update en producción

--- a/historia.html
+++ b/historia.html
@@ -40,7 +40,7 @@
                                 <ul class="mb-0 list-unstyled d-inline-flex">
                                     <li class="menu-item-has-children"><a href="./" title="">INICIO</a></li>
                                     <li class="menu-item-has-children"><a href="historia.html" title="">HISTORIA</a></li>  
-                                    <li><a href="view/formulario.php" title="">FORMULARIO</a></li>
+                                    <li><a href="view/login.php" title="">FORMULARIO</a></li>
                                     <li><a href="oferta.html" title="">OFERTA</a></li>
                                     <li><a href="#" title="">BLOG</a></li>
                                 </ul>
@@ -60,7 +60,7 @@
                 <ul class="mb-0 list-unstyled w-100">
                     <li class="menu-item-has-children"><a href="./" title="">INICIO</a></li>
                     <li class="menu-it@em-has-children"><a href="#" title="">HISTORIA</a></li>  
-                    <li><a href="view/formulario.php">FORMULARIO</a></li>
+                    <li><a href="view/login.php">FORMULARIO</a></li>
                     <li><a href="oferta.html" title="">OFERTA</a></li>
                     <li><a href="#" title="">BLOG</a></li>                         
                 </ul>
