en databases.php se modifico la query crear_info_ies recibia 'id_user' y 'ies', sinembargo la insercion no se realizaba correctamente solo se insertaron el email y el telefono y se cambio de posicion en el archivo new_usuario.php el como recibia las variables ya que donde insertaba la ies se insertaba por el usuario y viceversa, ademas en datos institucionales se puede observar ahora al encargado y estan en modo readonly para evitar su modificacion

--- a/oferta.html
+++ b/oferta.html
@@ -42,6 +42,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        
        <header class="stick style1 w-100" style=" background-color: #860f01;">
                 <div class="container">
                     <div class="logo-menu-wrap w-100 d-flex flex-wrap justify-content-between align-items-start">
@@ -57,9 +58,10 @@
                                 </ul>
                             </div>
                             <div class="header-right-btns">
-                                <!--<a class="search-btn" href="javascript:void(0);" title="">
-                                    <i class="flaticon-magnifying-glass"></i></a>-->
-                               <a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a>
+                                <!-- <a class="search-btn" href="javascript:void(0);" title="">
+                                    <i class="flaticon-magnifying-glass"></i></a> -->
+                                    
+                               <!-- <a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a> -->
                                <!-- <a class="menu-btn" href="javascript:void(0);" title=""><i class="flaticon-menu"></i></a>-->
                             </div>
                         </nav>
