funcionalidad del monito user para reenviar al usuario a formulario

--- a/historia.html
+++ b/historia.html
@@ -48,7 +48,8 @@
                             <div class="header-right-btns">
                                 <!--<a class="search-btn" href="javascript:void(0);" title="">
                                     <i class="flaticon-magnifying-glass"></i></a>-->
-                               <a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a>
+                                    <a href="view/login.php"><i class="flaticon-user"></i></a>
+                                    <!-- <a href="view/login.php" class="user-btn" title=""a>      -->
                                <!-- <a class="menu-btn" href="javascript:void(0);" title=""><i class="flaticon-menu"></i></a>-->
                             </div>
                         </nav>
@@ -63,6 +64,7 @@
                     <li><a href="view/login.php">FORMULARIO</a></li>
                     <li><a href="oferta.html" title="">OFERTA</a></li>
                     <li><a href="#" title="">BLOG</a></li>                         
+                    
                 </ul>
             </div><!-- Menu Wrap -->
 
