--- a/historia.html
+++ b/historia.html
@@ -31,7 +31,7 @@
    </head>
    <body>
       <main>
-        <header class="stick style1 w-100" style=" background-color: #860f01;">
+        <header class="stick style1 w-100" style=" background-color: #98213A;">
                 <div class="container">
                     <div class="logo-menu-wrap w-100 d-flex flex-wrap justify-content-between align-items-start">
                         <div class="logo"><h1 class="mb-0"><a href="index.html" title="Home"><img class="img-fluid" src="assets/images/img/logo_blanco2.png" alt="Logo" srcset="assets/images/img/logo_blanco2.png"></a></h1></div> 
@@ -220,7 +220,7 @@
             </section>
 
 
-            <footer style="background-color: #860f01;" id="contacto">
+            <footer style=" background-color: #98213A;" id="contacto">
                 <div class="w-100 pt-121  opc1 position-relative">
                     <div class="container position-relative">
                         <div class="footer-wrap w-100 text-center">
