se agrego monito user al nav de oferta y index que redirecciona al usuario a login.php!

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                     <i class="flaticon-magnifying-glass"></i></a>-->
                                <!--<a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a>-->
                                <!-- <a class="menu-btn" href="javascript:void(0);" title=""><i class="flaticon-menu"></i></a>-->
+                               <a href="view/login.php"><i class="flaticon-user"></i></a>
                             </div>
                         </nav>
                     </div><!-- Logo Menu Wrap -->
