--- a/oferta.html
+++ b/oferta.html
@@ -60,7 +60,7 @@
                             <div class="header-right-btns">
                                 <!-- <a class="search-btn" href="javascript:void(0);" title="">
                                     <i class="flaticon-magnifying-glass"></i></a> -->
-                                    
+                                    <a href="view/login.php"><i class="flaticon-user"></i></a>
                                <!-- <a class="user-btn" href="javascript:void(0);" title=""><i class="flaticon-user"></i></a> -->
                                <!-- <a class="menu-btn" href="javascript:void(0);" title=""><i class="flaticon-menu"></i></a>-->
                             </div>
