cambio a la pagina de historia

--- a/historia.html
+++ b/historia.html
@@ -88,10 +88,18 @@
                                   
                                 </div>
                                 <div class="col-md-12 col-sm-12 col-lg-6" >                                    
-                                    <h2 style="color: #b48f5e">Lorem Ipsum</h2>
+                                    <h2 style="color: #b48f5e">Presentación</h2>
                                     <div class="about-desc w-100">
-                                        <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><br>
-                                        <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                        <p class="mb-0">
+                                            Las Instituciones de Educación Superior (IES) mexicanas, en atención a su responsabilidad
+                                            social y su rol decisivo en el desarrollo del país, han impulsado diversos mecanismos de
+                                            vinculación con su entorno, y en años recientes han fortalecido esquemas de formación de
+                                            sus estudiantes en coordinación con los sectores productivos, a los que se les ha referido
+                                            como formación o educación dual, y que de forma general se caracterizan porque el
+                                            desarrollo del proceso de aprendizaje, se lleva a cabo de manera combinada tanto en las
+                                            instituciones educativas, como en contextos reales del ámbito laboral.
+                                        </p><br>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -108,11 +116,11 @@
                     <div class="sec-title mb-50 title-wth-btn d-flex flex-wrap justify-content-between align-items-center w-100">
 
 
-                        <div class="col-md-4 col-sm-4 col-lg-4">
+                        <!--<div class="col-md-4 col-sm-4 col-lg-4">
                             <div class="sec-title-btn">
                                 <a class="thm-btn lft-icon fill-btn" href="#" target="_black"><i class="flaticon-download"></i>Descargar Cronológico<span></span></a>
                             </div>
-                        </div>
+                        </div>-->
                         </div><!-- Sec Title -->
                         <div class="event-wrap w-100">
                             <div class="row">
