--- a/historia.html
+++ b/historia.html
@@ -42,7 +42,7 @@
                                     <li class="menu-item-has-children"><a href="historia.html" title="">HISTORIA</a></li>  
                                     <li><a href="view/login.php" title="">FORMULARIO</a></li>
                                     <li><a href="oferta.html" title="">OFERTA</a></li>
-                                    <li><a href="#" title="">BLOG</a></li>
+                                    <!-- <li><a href="#" title="">BLOG</a></li> -->
                                 </ul>
                             </div>
                             <div class="header-right-btns">
@@ -62,7 +62,7 @@
                     <!-- <li class="menu-it@em-has-children"><a href="#" title="">HISTORIA</a></li>   -->
                     <li><a href="view/login.php">FORMULARIO</a></li>
                     <li><a href="oferta.html" title="">OFERTA</a></li>
-                    <li><a href="#" title="">BLOG</a></li>                         
+                    <!-- <li><a href="#" title="">BLOG</a></li>                          -->
                     
                 </ul>
             </div><!-- Menu Wrap -->
