--- a/oferta.html
+++ b/oferta.html
@@ -54,7 +54,7 @@
                                     <li class="menu-item-has-children"><a href="historia.html" title="">HISTORIA</a></li>  
                                     <li><a href="view/login.php" title="">FORMULARIO</a></li>
                                     <li><a href="oferta.html" title="">OFERTA</a></li>
-                                    <li><a href="#" title="">BLOG</a></li>
+                                    <!-- <li><a href="#" title="">BLOG</a></li> -->
                                 </ul>
                             </div>
                             <div class="header-right-btns">
@@ -75,7 +75,7 @@
                     <li class="menu-it@em-has-children"><a href="historia.html" title="">HISTORIA</a></li>  
                     <li><a href="view/login.php">FORMULARIO</a></li>
                     <!-- <li><a href="#" title="">OFERTA</a></li> -->
-                    <li><a href="#" title="">BLOG</a></li>                         
+                    <!-- <li><a href="#" title="">BLOG</a></li>                          -->
                 </ul>
             </div><!-- Menu Wrap -->  
             <div class="login-popup-wrap position-fixed h-100 text-center d-flex flex-wrap align-items-center justify-content-center w-100">
