se realizaron los cambios en en navbar en todas las secciones

--- a/historia.html
+++ b/historia.html
@@ -39,9 +39,9 @@
                             <div class="header-left">
                                 <ul class="mb-0 list-unstyled d-inline-flex">
                                     <li class="menu-item-has-children"><a href="./" title="">INICIO</a></li>
-                                    <li class="menu-item-has-children"><a href="historia.html" title="">HISTORIA</a></li>  
+                                    <!-- <li class="menu-item-has-children"><a href="historia.html" title="">HISTORIA</a></li>   -->
                                     <li><a href="view/login.php" title="">FORMULARIO</a></li>
-                                    <li><a href="oferta.html" title="">OFERTA</a></li>
+                                    <!-- <li><a href="oferta.html" title="">OFERTA</a></li> -->
                                     <!-- <li><a href="#" title="">BLOG</a></li> -->
                                 </ul>
                             </div>
