--- a/historia.html
+++ b/historia.html
@@ -7,7 +7,7 @@
       <meta name="description" content="" />
       <meta name="keywords" content="" />
       <link rel="icon" href="assets/images/favicon.png" sizes="35x35" type="image/png">
-      <title>Registro</title>
+      <title>Historia educacion dual</title>
       <link rel="stylesheet" href="assets/css/all.min.css">
       <link rel="stylesheet" href="assets/css/flaticon.css">
       <link rel="stylesheet" href="assets/css/animate.min.css">
