--- a/oferta.html
+++ b/oferta.html
@@ -9,6 +9,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--Dependencias SELECT2-->
+        <!-- <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> -->
           <link rel="apple-touch-icon" href="apple-touch-icon.png">        
           <link rel="stylesheet" href="assets/css/all.min.css">
           <link rel="stylesheet" href="assets/css/flaticon.css">
